# Ned

./: .gitignore  CMakeLists.txt  FindDialog.cpp  FindDialog.h  MainWindow.cpp  MainWindow.h  Ned.pro  Ned.qrc  README  README.md  main.cpp  mainwindow.cpp  mainwindow.h  ned.qrc  ned_hu.ts
images/: .directory
src/: CMakeLists.txt  FindDialog.cpp  FindDialog.h  MainWindow.cpp  MainWindow.h  QuickDialog.cpp  QuickDialog.h  main.cpp  qrc_Ned.cxx
translations/: ned_hu.qm  ned_hu.ts
